// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-fFubgz enpase Sidebar-resources "
>
  <div
    className="sc-bkzZxe"
  >
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ sc-crrsfI kMmBqX krEvoc"
        >
          <div
            className="sc-fubCfw sc-dQppl htTwiz dBgviy isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz ibUBzS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        resources
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource4"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource4
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource9"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource9
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource19"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource19
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource29"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource29
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource39"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource39
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource49"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource49
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="resource54"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    resource54
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-fFubgz enpase Sidebar-resources "
>
  <div
    className="sc-bkzZxe"
  >
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ sc-crrsfI kMmBqX krEvoc"
        >
          <div
            className="sc-fubCfw sc-dQppl htTwiz dBgviy isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz ibUBzS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        resources
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-fFubgz enpase Sidebar-resources "
>
  <div
    className="sc-bkzZxe"
  >
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ sc-crrsfI kMmBqX krEvoc"
        >
          <div
            className="sc-fubCfw sc-dQppl htTwiz dBgviy isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz ibUBzS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        resources
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="vigoda"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    vigoda
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Update error
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="snack"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    snack
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Update error
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-fFubgz enpase Sidebar-resources "
>
  <div
    className="sc-bkzZxe"
  >
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ sc-crrsfI kMmBqX krEvoc"
        >
          <div
            className="sc-fubCfw sc-dQppl htTwiz dBgviy isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-gsTCUz ibUBzS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-idOhPF iEogrZ"
      >
        resources
      </div>
      <ul
        className="sc-dIUggk jcsQMg"
      >
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="vigoda"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    vigoda
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  —
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Updating…
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-iBPRYJ kMmBqX u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-fubCfw htTwiz  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ jtPfXf"
            >
              <div
                className="sc-jrAGrp gsFFSQ"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH sc-bqyKva cHCqfV bgFtBl"
                  title="snack"
                >
                  <span
                    className="sc-kstrdz crBnSl"
                  >
                    snack
                  </span>
                </div>
                <button
                  className="sc-dlfnbm hUCvcm"
                  onClick={[Function]}
                  title="Pin to Top"
                >
                  <svg
                    className="sc-eCssSg doZCTl"
                  >
                    pin.svg
                  </svg>
                </button>
                <span
                  className="sc-hBEYos kXyNpy"
                >
                  —
                </span>
              </div>
              <div
                className="sc-kEjbxe gZCFNz"
              >
                <div
                  aria-describedby={null}
                  className="sc-gsTCUz ibUBzS isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-iqHYGH cHCqfV"
                >
                  Updating…
                </div>
              </div>
            </div>
            <div
              className="sc-fodVxV iuwQDb"
            >
              <button
                className="sc-jSgupP escLvy"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
